12-gke-platform-admins/budita-app/acm/namespaces/frontend/istio-egress-metadata.yaml
# Istio addon allows egress by default
# This has no effect in our case: No harm in keeping it
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: allow-egress-google-metadata
spec:
  hosts:
  - metadata.google.internal
  addresses:
  - 169.254.169.254 # GCE metadata server
  ports:
  - number: 80
    name: http
    protocol: HTTP
  - number: 443
    name: https
    protocol: HTTPS
